# chatbot

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.e5.yml  docker-compose.full-ml.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
apps/web/: index.html  package.json  tailwind.config.js  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/tenants/: page.tsx
apps/web/app/tenants/[tenantId]/: page.tsx
apps/web/components/: chat-panel.tsx  dashboard-shell.tsx  document-panel.tsx  jobs-panel.tsx  pipeline-overview.tsx  query-panel.tsx  system-status.tsx  tenant-management-page.tsx  tenant-workspace-shell.tsx
apps/web/lib/: api.ts
apps/web/src/: App.tsx  index.css
apps/web/src/components/: ChatPanel.tsx  Dashboard.tsx  DocumentPanel.tsx  TenantManager.tsx  TenantWorkspace.tsx
apps/web/src/lib/: api.ts  format.ts
docs/: architecture.md  implementation-roadmap.md  promt.txt
infra/docker/: entrypoint.sh  python-service.Dockerfile  web-entrypoint.sh  web.Dockerfile
infra/scripts/: preload_bge_m3.py
requirements/: all.txt  base.txt  ml.txt  parsing.txt  queue.txt  storage.txt
services/api-gateway/app/: main.py
services/api-gateway/app/routers/: orchestration.py
services/document-service/app/: main.py
services/document-service/app/routers/: chat.py  documents.py  health.py  tenants.py
services/graph-service/app/: main.py
services/graph-service/app/routers/: graph.py
services/llm-orchestrator/app/: main.py
services/llm-orchestrator/app/routers/: generation.py  health.py
services/retrieval-service/app/: main.py
services/retrieval-service/app/routers/: health.py  retrieval.py
services/worker/app/: celery_app.py  main.py  tasks.py
services/worker/app/routers/: __init__.py  health.py  jobs.py
