[project]
name = "enterprise-chatbot-graph-rag"
version = "0.1.0"
description = "Production-oriented monorepo scaffold for an Enterprise Graph RAG platform."
requires-python = ">=3.12"
dependencies = [
  "boto3>=1.39.9",
  "beautifulsoup4>=4.13.4",
  "celery[rabbitmq]>=5.4.0",
  "fastapi>=0.116.0",
  "FlagEmbedding>=1.3.5",
  "greenlet>=3.2.3",
  "httpx>=0.28.0",
  "neo4j>=5.28.1",
  "orjson>=3.10.0",
  "openpyxl>=3.1.5",
  "pgvector>=0.3.6",
  "Pillow>=11.3.0",
  "psycopg[binary]>=3.2.9",
  "pydantic-settings>=2.10.0",
  "pypdf>=5.8.0",
  "pymupdf>=1.26.3",
  "python-docx>=1.2.0",
  "python-multipart>=0.0.20",
  "python-pptx>=1.0.2",
  "pytesseract>=0.3.13",
  "redis>=6.2.0",
  "sentencepiece>=0.2.0",
  "SQLAlchemy>=2.0.41",
  "structlog>=25.4.0",
  "torch>=2.4.0",
  "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "ruff>=0.12.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
